--- a/CodeText/Base.lproj/Main.storyboard
+++ b/CodeText/Base.lproj/Main.storyboard
@@ -727,7 +727,7 @@
                                     </subviews>
                                 </clipView>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="500" id="nUK-E5-10f"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="500" id="nUK-E5-10f"/>
                                 </constraints>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="7c2-DY-m3D">
                                     <rect key="frame" x="874" y="0.0" width="15" height="500"/>
